fixes graph test api