@@ -27,9 +27,9 @@ import org.junit.jupiter.api.extension.ExtendWith;
 import javax.inject.Inject;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
 
 import static java.util.Collections.singletonMap;
+import static java.util.stream.Collectors.toList;
 import static org.hamcrest.MatcherAssert.assertThat;
 import static org.hamcrest.Matchers.containsInAnyOrder;
 import static org.junit.jupiter.api.Assertions.assertEquals;
@@ -61,7 +61,8 @@ class GremlinExecutorTest {
     @Test
     public void shouldExecuteQueryEdges() {
 
-        List<EdgeEntity> edges = executor.executeGremlin(graph.traversal(), "g.E()");
+        List<EdgeEntity> edges = executor.<EdgeEntity> executeGremlin(graph.traversal(), "g.E()")
+                .collect(toList());
         assertFalse(edges.isEmpty());
         EdgeEntity edgeEntity = edges.get(0);
         Person person = edgeEntity.getIncoming();
@@ -75,7 +76,8 @@ class GremlinExecutorTest {
     @Test
     public void shouldExecuteQueryEdges2() {
 
-        List<EdgeEntity> edges = executor.executeGremlin(graph.traversal(), "g.E().toList()");
+        List<EdgeEntity> edges = executor.<EdgeEntity> executeGremlin(graph.traversal(), "g.E().toList()")
+                .collect(toList());;
         assertFalse(edges.isEmpty());
         EdgeEntity edgeEntity = edges.get(0);
         Person person = edgeEntity.getIncoming();
@@ -88,48 +90,53 @@ class GremlinExecutorTest {
 
     @Test
     public void shouldExecuteQueryVertex() {
-        List<Person> people = executor.executeGremlin(graph.traversal(), "g.V()");
+        List<Person> people = executor.<Person>executeGremlin(graph.traversal(), "g.V()")
+                .collect(toList());
         assertFalse(people.isEmpty());
-        List<String> names = people.stream().map(Person::getName).collect(Collectors.toList());
+        List<String> names = people.stream().map(Person::getName).collect(toList());
         assertThat(names, containsInAnyOrder("Bruce Banner", "Natasha Romanoff"));
 
     }
 
     @Test
     public void shouldExecuteQueryVertex2() {
-        List<Person> people = executor.executeGremlin(graph.traversal(), "g.V().toList()");
+        List<Person> people = executor.<Person>executeGremlin(graph.traversal(), "g.V().toList()")
+                .collect(toList());
         assertFalse(people.isEmpty());
-        List<String> names = people.stream().map(Person::getName).collect(Collectors.toList());
+        List<String> names = people.stream().map(Person::getName).collect(toList());
         assertThat(names, containsInAnyOrder("Bruce Banner", "Natasha Romanoff"));
 
     }
 
     @Test
     public void shouldExecuteQueryVertex3() {
-        List<Person> people = executor.executeGremlin(graph.traversal(), "g.V().in('loves').toList()");
-        assertFalse(people.isEmpty());
-        List<String> names = people.stream().map(Person::getName).collect(Collectors.toList());
+        List<Person> people = executor.<Person>executeGremlin(graph.traversal(), "g.V().in('loves').toList()")
+                .collect(toList());
+        List<String> names = people.stream().map(Person::getName).collect(toList());
         assertThat(names, containsInAnyOrder("Bruce Banner"));
 
     }
 
     @Test
     public void shouldExecuteQueryCount() {
-        List<Long> count = executor.executeGremlin(graph.traversal(), "g.V().count().toList()");
+        List<Long> count = executor.<Long>executeGremlin(graph.traversal(), "g.V().count().toList()")
+                .collect(toList());
         assertFalse(count.isEmpty());
         assertThat(count, containsInAnyOrder(2L));
     }
 
     @Test
     public void shouldExecuteQueryCoun2() {
-        List<Long> count = executor.executeGremlin(graph.traversal(), "g.V().count()");
+        List<Long> count = executor.<Long>executeGremlin(graph.traversal(), "g.V().count()")
+                .collect(toList());;
         assertFalse(count.isEmpty());
         assertThat(count, containsInAnyOrder(2L));
     }
 
     @Test
     public void shouldExecuteQueryProperties() {
-        List<Object> properties = executor.executeGremlin(graph.traversal(), "g.V().values()");
+        List<Object> properties = executor.<Object>executeGremlin(graph.traversal(), "g.V().values()")
+                .collect(toList());
         assertFalse(properties.isEmpty());
         assertEquals(4, properties.size());
         assertThat(properties, containsInAnyOrder("Bruce Banner", 30, 30, "Natasha Romanoff"));
@@ -137,7 +144,8 @@ class GremlinExecutorTest {
 
     @Test
     public void shouldExecuteQueryProperties2() {
-        List<Object> properties = executor.executeGremlin(graph.traversal(), "g.V().values().toList()");
+        List<Object> properties = executor.executeGremlin(graph.traversal(), "g.V().values().toList()")
+                .collect(toList());
         assertFalse(properties.isEmpty());
         assertEquals(4, properties.size());
         assertThat(properties, containsInAnyOrder("Bruce Banner", 30, 30, "Natasha Romanoff"));
@@ -145,31 +153,34 @@ class GremlinExecutorTest {
 
     @Test
     public void shouldExecuteQueryPropertiesMap() {
-        List<Map<String, List<String>>> properties = executor.executeGremlin(graph.traversal(), "g.V().valueMap('name')");
+        List<Map<String, List<String>>> properties = executor.<Map<String, List<String>>>
+                executeGremlin(graph.traversal(), "g.V().valueMap('name')")
+                .collect(toList());
         assertFalse(properties.isEmpty());
         assertEquals(2, properties.size());
-        List<String> names = properties.stream().map(p -> p.get("name")).flatMap(List::stream).collect(Collectors.toList());
+        List<String> names = properties.stream().map(p -> p.get("name")).flatMap(List::stream).collect(toList());
         assertThat(names, containsInAnyOrder("Bruce Banner", "Natasha Romanoff"));
     }
 
     @Test
     public void shouldExecuteQueryPropertiesMap2() {
-        List<Map<String, List<String>>> properties = executor.executeGremlin(graph.traversal(), "g.V().valueMap('name').toList()");
-        assertFalse(properties.isEmpty());
+        List<Map<String, List<String>>> properties = executor.<Map<String, List<String>>>
+                executeGremlin(graph.traversal(), "g.V().valueMap('name').toList()")
+                .collect(toList());
         assertEquals(2, properties.size());
-        List<String> names = properties.stream().map(p -> p.get("name")).flatMap(List::stream).collect(Collectors.toList());
+        List<String> names = properties.stream().map(p -> p.get("name")).flatMap(List::stream).collect(toList());
         assertThat(names, containsInAnyOrder("Bruce Banner", "Natasha Romanoff"));
     }
 
     @Test
     public void shouldExecuteWithParams() {
 
-        List<Person> people = executor.executeGremlin(graph.traversal(),
-                "g.V().in(param).toList()",singletonMap("param", "loves"));
-
+        List<Person> people = executor.<Person>executeGremlin(graph.traversal(),
+                "g.V().in(param).toList()",singletonMap("param", "loves"))
+                .collect(toList());
 
         assertFalse(people.isEmpty());
-        List<String> names = people.stream().map(Person::getName).collect(Collectors.toList());
+        List<String> names = people.stream().map(Person::getName).collect(toList());
         assertThat(names, containsInAnyOrder("Bruce Banner"));
     }
 }
